<resources>
    <string name="app_name">Zensino</string>
    <string name="network_error">Errore di rete, controllare la connessione</string>
    <string name="request_error">HTTP %d - Request errore</string>
    <string name="unauthorized_error">HTTP %d - Not authorized</string>
    <string name="not_found_error">HTTP %d - Not found</string>
    <string name="internal_server_error">HTTP %d - Internal server error</string>
    <string name="timeout">Timeout</string>
    <string name="username">Username</string>
    <string name="default_username">CareComfort</string>
    <string name="password">Password</string>
    <string name="default_password">care2020</string>
    <string name="login">Log In</string>
    <string name="username_invalid">Invalid username</string>
    <string name="password_invalid">Invalid password</string>
    <string name="no_user">No user</string>
    <string name="error">Errore</string>
    <string name="empty_value">-</string>
    <string name="last_update">Last update: %s</string>
    <string name="stop">Stop</string>
    <string name="notification_channel_id">notification_channel_zensi_status</string>
    <string name="notification_status_message">Connected to Zensi</string>
    <string name="report_false_alarm">Report false alarm</string>
    <string name="Snooze">snooze</string>
    <string name="ok">OK</string>
    <string name="popup_title">%s (%d)</string>
    <string name="logout">Logout</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="offline">Offline</string>
    <string name="standby">Stand-by</string>
    <string name="inD">In: %1$d d</string>
    <string name="outD">Out: %1$d d</string>
    <string name="inM">In: %1$d m</string>
    <string name="outM">Out: %1$d m</string>
    <string name="inHM">In: %1$d h %2$s m</string>
    <string name="outHM">Out: %1$d h %2$s m</string>
    <string name="calibrate_step1_title">You are about to calibrate this Bed Sensor.</string>
    <string name="calibrate_step2_title">Lift up or remove the mattress from the bed so you can see where the sensors will be.</string>
    <string name="calibrate_step3_title">Position the two sensors of the Zensi on the left and right side of the sleeping area, underneath the mattress and below where the hips will be.</string>
    <string name="calibrate_step4_title">Put the mattress back onto the bed.</string>
    <string name="calibrate_step_end_title">"Automatic Sensor calibration has started."</string>
    <string name="calibrate_step2_description">This is to make sure that you can position the Sensors correctly in the next step.</string>
    <string name="calibrate_step_end_description">"Important:\n The bed should remain empty for 2 minutes for the calibration to work! "</string>
    <string name="calibrate_step_end_important">If any issues persist, feel free to get in touch via info@zensi.be</string>
    <string name="calibrate_step4_important">Important:\nPlease make sure that nobody is in bed before pressing Calibrate, otherwise the calibration will not work!</string>
    <string name="calibrate_step1_important">"Important:\n Sensor must be plugged in and connected to the App, and nobody can be in the bed during Calibration! "</string>
    <string name="calibrate_step_error_title">An error has occurred</string>
    <string name="calibrate_step_error_description">The calibration could not be performed. This is either because your facility does not allow it or because of a server error.</string>
    <string name="calibrate_step_error_important">Please try later or contact us at info@zensi.be</string>
    <string name="calibrate_step4_description">"Sensors are now underneath the mattress. Check that there is no falling risk with the cable. "</string>
    <string name="calibrate_step_end_afterwards">Afterwards you can use the bed as normal.</string>
    <string name="calibrate_step1_description">"Calibration can be used to reset the Sensor if you experience that (i) the sensor says that nobody is in bed when a patient is in it, or (ii) the sensor says patient is in bed when nobody is there. "</string>
    <string name="cancel">Cancel</string>
    <string name="calibrate">Calibrate</string>
    <string name="logo_hospital">Hospital Logo</string>
    <string name="title_displayname">Display name</string>
    <string name="title_monitor_enabled">Monitor</string>

    <!-- Strings related to Disconnection -->

    <string name="disconnected_message">"Please be aware that you will not receive notifications until you are back in the range of your WIFI network. "</string>
    <string name="disconnected_title">Lost connection Zensi is paused until internet connection is restored</string>
    <string name="temporary_disconnected_title">Internet connection was temporarily lost</string>
    <string name="temporary_disconnected_message">Please be aware that notifications were paused from %s to %s</string>

    <!-- Strings related to Settings -->

    <string name="key_sound" translatable="false">sound</string>
    <string name="key_vibrate" translatable="false">vibrate</string>
    <string name="key_logout" translatable="false">logout</string>
    <string name="key_account" translatable="false">account</string>
    <string name="key_num_columns" translatable="false">num_columns</string>
    <string name="key_token" translatable="false">token</string>
    <string name="key_mode" translatable="false">mode</string>
    <string name="key_username" translatable="false">username</string>
    <string name="key_password" translatable="false">password</string>
    <string name="key_sensor_number" translatable="false">sensor_number</string>
    <string name="key_sensor_displayname" translatable="false">sensor_displayname</string>
    <string name="key_monitor_enabled" translatable="false">monitor_enabled</string>
    <string name="key_morning" translatable="false">morning</string>
    <string name="key_lunch" translatable="false">lunch</string>
    <string name="key_afternoon" translatable="false">afternoon</string>
    <string name="key_evening" translatable="false">evening</string>
    <string name="key_night" translatable="false">night</string>
    <string name="key_cat_time_slot" translatable="false">time_slot</string>
    <string name="key_cat_threshold">threshold</string>
    <string name="key_cat_sensor_options" translatable="false">sensor_options</string>
    <string name="title_cat_time_slot">Time slot</string>
    <string name="summary_morning" translatable="false">07:30 – 11:30</string>
    <string name="summary_lunch" translatable="false">11:30 – 13:30</string>
    <string name="summary_afternoon" translatable="false">13:30 – 18:30</string>
    <string name="summary_evening" translatable="false">18:30 – 21:30</string>
    <string name="summary_night" translatable="false">21:30 – 07:30</string>
    <string name="key_threshold" translatable="false">threshold</string>
    <string name="key_snooze" translatable="false">popup_snooze_2</string>
    <string name="key_extra_sensor" translatable="false">sensor</string>
    <string name="key_extra_alert_time_labels" translatable="false">alert_time_labels</string>
    <string name="key_extra_alert_time_colors" translatable="false">alert_time_colors</string>
    <string name="key_logo" translatable="false">logo</string>
    <string name="key_timeslots" translatable="false">timeslots</string>
    <string name="title_morning">Morning</string>
    <string name="title_lunch">Lunch</string>
    <string name="title_afternoon">Afternoon</string>
    <string name="title_evening">Evening</string>
    <string name="title_night">Night</string>
    <string name="title_cat_sensor_options">Sensor options</string>
    <string name="title_cat_alert_trigger">Alert trigger</string>

</resources>